// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating rollup stats 3 {"format":"amd","expected":"amd"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-amd",
  "bundler": {
    "name": "rollup",
    "version": "3.30.0",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-6f24514f.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562211,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"cjs","expected":"cjs"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-cjs",
  "bundler": {
    "name": "rollup",
    "version": "3.30.0",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-d7538cef.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562211,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"es","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.30.0",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-14296bbb.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562211,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"esm","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.30.0",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-14296bbb.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562211,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"module","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-esm",
  "bundler": {
    "name": "rollup",
    "version": "3.30.0",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-14296bbb.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562211,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"iife","expected":"iife"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-iife",
  "bundler": {
    "name": "rollup",
    "version": "3.30.0",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-6f13f137.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562211,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"umd","expected":"umd"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-umd",
  "bundler": {
    "name": "rollup",
    "version": "3.30.0",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-2fc4dfd0.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562211,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"system","expected":"system"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-system",
  "bundler": {
    "name": "rollup",
    "version": "3.30.0",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-fc2536b6.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562211,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 {"format":"systemjs","expected":"system"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v3-system",
  "bundler": {
    "name": "rollup",
    "version": "3.30.0",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-fc2536b6.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562211,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 3 source maps are enabled does not include any source maps 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringNotContaining ".map",
  "bundler": {
    "name": "rollup",
    "version": "3.30.0",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-14296bbb.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562211,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV3",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"amd","expected":"amd"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-amd",
  "bundler": {
    "name": "rollup",
    "version": "4.60.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-Df2W2Ljo.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562101,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"cjs","expected":"cjs"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-cjs",
  "bundler": {
    "name": "rollup",
    "version": "4.60.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-IC3CKzU2.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562101,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"es","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.60.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-DsZqR5xx.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562101,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"esm","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.60.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-DsZqR5xx.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562101,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"module","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-esm",
  "bundler": {
    "name": "rollup",
    "version": "4.60.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-DsZqR5xx.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562101,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"iife","expected":"iife"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-iife",
  "bundler": {
    "name": "rollup",
    "version": "4.60.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-oTH3GulX.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562101,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"umd","expected":"umd"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-umd",
  "bundler": {
    "name": "rollup",
    "version": "4.60.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-D_1nnjap.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562101,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"system","expected":"system"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-system",
  "bundler": {
    "name": "rollup",
    "version": "4.60.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-ChozhkL-.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562101,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 {"format":"systemjs","expected":"system"} matches the snapshot 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-rollup-v4-system",
  "bundler": {
    "name": "rollup",
    "version": "4.60.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-ChozhkL-.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562101,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;

exports[`Generating rollup stats 4 source maps are enabled does not include any source maps 1`] = `
{
  "assets": ExpectArrayContaining {},
  "builtAt": Any<Number>,
  "bundleName": StringNotContaining ".map",
  "bundler": {
    "name": "rollup",
    "version": "4.60.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-DsZqR5xx.js",
      ],
      "id": "main",
      "initial": false,
      "names": [
        "main",
      ],
      "uniqueId": "0-main",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./commonjsHelpers.js",
      "size": 334,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js?commonjs-module",
      "size": 27,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "../node_modules/.pnpm/lodash@4.18.0/node_modules/lodash/lodash.js",
      "size": 562101,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/getRandomNumber.js",
      "size": 98,
    },
    {
      "chunkUniqueIds": [
        "0-main",
      ],
      "name": "./test-apps/rollup/src/main.js",
      "size": 163,
    },
  ],
  "outputPath": StringContaining "/distV4",
  "plugin": {
    "name": StringMatching "@codecov/rollup-plugin",
    "version": "2.0.1",
  },
  "version": "3",
}
`;
